@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-18T08:19:57Z",
+  "timestamp" : "2022-09-19T01:55:20Z",
   "count_outdated" : 525,
   "uniques_outdated" : 304,
-  "count" : 556,
+  "count" : 557,
   "uniques" : 321,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-09-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
