@@ -1,5 +1,5 @@
 {
-  "count": 31,
+  "count": 32,
   "uniques": 6,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2022-09-18T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
