@@ -1,3 +1,11 @@
+2022-09-19T01:55:20Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3079447822
+* notice: last 14d: unq all: 6 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 304 525 / 321 556
+* notice: next accum: outdated-unq outdated-all / unq all: 304 525 / 321 557
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-18]
+
 2022-09-18T08:19:57Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3076423771
 * notice: last 14d: unq all: 6 31
